# Minecraylib

./: CMakeLists.txt  README.md
assets/: gage.png~
assets/shaders/: opaque.fs
source/: blockmodel.hpp  blocktype.hpp  chunk.cpp  chunk.hpp  global.hpp  main.cpp  world.cpp  world.hpp
source/engine/: core.cpp  core.hpp  resourceloader.cpp  resourceloader.hpp
